--- a/src/containers/features/features.css
+++ b/src/containers/features/features.css
@@ -53,6 +53,13 @@
     flex-direction: column;
 }
 
+@media screen and (max-width: 1100px) {
+    .responsive__features-image img {
+        width: 120%;
+        height: 60%;
+    }
+}
+
 @media screen and (max-width: 990px) {
     .responsive__features {
         flex-direction: column;
