--- a/src/containers/possibility/possibility.css
+++ b/src/containers/possibility/possibility.css
@@ -48,6 +48,22 @@
     margin-bottom: 2rem;
 }
 
+@media screen and (max-width: 1100px) {
+    .responsive__possibility {
+        flex-direction: column;
+    }
+    .responsive__possibility-image img {
+        width: 70%;
+        height: 100%;
+    }
+    .responsive__possibility-image {
+        margin: 2rem 0;
+    }
+    .responsive__possibility-content {
+        margin-top: 2rem;
+    }
+}
+
 @media screen and (max-width: 950px) {
     .responsive__possibility {
         flex-direction: column;
@@ -58,15 +74,14 @@
     }
 
     .responsive__possibility-image img {
-        width: unset;
-        height: unset;
+        width: 100%;
+        height: 100%;
     }
 
     .responsive__possibility-content {
         margin-top: 2rem;
     }
 }
-
 @media screen and (max-width: 700px) {
     .responsive__possibility-image img {
         width: 100%;
